README, add some Javadocs